--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <h1>Ekzercaro<span id="numeroEkzercaro"></span></h1>
     <p class="fable" id="fablo"></p>
-    <p id="rezulto"></p>
+    <span id="rezulto"></span><br><span id="klarigo"></span>
     <div class="controls">
         <button onclick="emfazigiVorton(-1)">&#8592;</button>
         <button onclick="emfazigiVorton(1)">&#8594;</button>
